--- a/public/home.html
+++ b/public/home.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>The Office Friend Finder</title>
+    <title>The Friend Finder</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -30,7 +30,7 @@
 
         <footer class="footer">
             <div class="container">
-                <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/jayxmiller24/Friend-Finder.git">GitHub Repo</a>
+                <p><a href="./api/friends">API Friends List</a> | <a href="https://github.com/jayxmiller24/Friend-Finder.git">GitHub Repo</a>
             </div>
         </footer>
 
